// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<p title="

           a complex title


with


newlines ">String</p>

<p title="

           a complex title

with
{{some mustache and}}


newlines ">String</p>

=====================================output=====================================
<p title='

           a complex title


with


newlines '>
  String
</p>

<p title='

           a complex title

with
{{some mustache and}}


newlines '>
  String
</p>
================================================================================
`;

exports[`attributes.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p title="

           a complex title


with


newlines ">String</p>

<p title="

           a complex title

with
{{some mustache and}}


newlines ">String</p>

=====================================output=====================================
<p title="

           a complex title


with


newlines ">
  String
</p>

<p title="

           a complex title

with
{{some mustache and}}


newlines ">
  String
</p>
================================================================================
`;

exports[`brackets.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
<div title='My {{title}}'></div>
<div title='My {{number}} "title"'></div>
<div title="My {{number}} 'title'"></div>

=====================================output=====================================
<div title='My title'></div>
<div title='My title'></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
<div title='My {{title}}'></div>
<div title='My {{number}} "title"'></div>
<div title='My {{number}} 'title''></div>
================================================================================
`;

exports[`brackets.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
<div title='My {{title}}'></div>
<div title='My {{number}} "title"'></div>
<div title="My {{number}} 'title'"></div>

=====================================output=====================================
<div title="My title"></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
<div title="My {{title}}"></div>
<div title="My {{number}} "title""></div>
<div title="My {{number}} 'title'"></div>
================================================================================
`;

exports[`class.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<p class="

          a list of


weirdly formatted


classes">String</p>
<p class="

          a list of


weirdly formatted


{{this.classes}}">String</p>

=====================================output=====================================
<p class='[object Object],[object Object],a list of


weirdly formatted


classes'>
  String
</p>
<p
  class='

  a list of


weirdly formatted

  {{this.classes}}'
>
  String
</p>
================================================================================
`;

exports[`class.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p class="

          a list of


weirdly formatted


classes">String</p>
<p class="

          a list of


weirdly formatted


{{this.classes}}">String</p>

=====================================output=====================================
<p class="[object Object],[object Object],a list of


weirdly formatted


classes">
  String
</p>
<p
  class="

  a list of


weirdly formatted

  {{this.classes}}"
>
  String
</p>
================================================================================
`;

exports[`scrset.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<img src="/assets/visual.png"
srcset="/assets/visual@0.5.png  400w, /assets/visual.png      805w"
sizes="(max-width: 66rem) 100vw, 66rem" alt=""/>
<img src="/assets/visual.png"
srcset="/assets/visual@0.5.png  400w, /assets/visual.png      805w,	/assets/visual@2x.png   1610w,	/assets/visual@3x.png   2415w"
sizes="(max-width: 66rem) 100vw, 66rem" alt=""/>
<img src="/assets/visual.png"
srcset="/assets/visual@0.5.png  0.5x, /assets/visual.png      1111x,	/assets/visual@2x.png   2x,	/assets/visual@3x.png   3.3333x"
sizes="(max-width: 66rem) 100vw, 66rem" alt=""/>
<img

srcset="
             /media/examples/surfer-240-200.jpg
">
<!-- #8150 -->
<img
sizes="(max-width: 1400px) 100vw, 1400px"
srcset="
_20200401_145009_szrhju_c_scale,w_200.jpg 200w,
_20200401_145009_szrhju_c_scale,w_379.jpg 379w,
_20200401_145009_szrhju_c_scale,w_515.jpg 515w,
_20200401_145009_szrhju_c_scale,w_630.jpg 630w,
_20200401_145009_szrhju_c_scale,w_731.jpg 731w,
_20200401_145009_szrhju_c_scale,w_828.jpg 828w,
_20200401_145009_szrhju_c_scale,w_921.jpg 921w,
_20200401_145009_szrhju_c_scale,w_995.jpg 995w,
_20200401_145009_szrhju_c_scale,w_1072.jpg 1072w,
_20200401_145009_szrhju_c_scale,w_1145.jpg 1145w,
_20200401_145009_szrhju_c_scale,w_1216.jpg 1216w,
_20200401_145009_szrhju_c_scale,w_1284.jpg 1284w,
_20200401_145009_szrhju_c_scale,w_1350.jpg 1350w,
_20200401_145009_szrhju_c_scale,w_1398.jpg 1398w,
_20200401_145009_szrhju_c_scale,w_1400.jpg 1400w"
src="_20200401_145009_szrhju_c_scale,w_1400.jpg"
alt="">

=====================================output=====================================
<img
  src='/assets/visual.png'
  srcset='/assets/visual@0.5.png  400w, /assets/visual.png      805w'
  sizes='(max-width: 66rem) 100vw, 66rem'
  alt=''
/>
<img
  src='/assets/visual.png'
  srcset='/assets/visual@0.5.png  400w, /assets/visual.png      805w,	/assets/visual@2x.png   1610w,	/assets/visual@3x.png   2415w'
  sizes='(max-width: 66rem) 100vw, 66rem'
  alt=''
/>
<img
  src='/assets/visual.png'
  srcset='/assets/visual@0.5.png  0.5x, /assets/visual.png      1111x,	/assets/visual@2x.png   2x,	/assets/visual@3x.png   3.3333x'
  sizes='(max-width: 66rem) 100vw, 66rem'
  alt=''
/>
<img srcset='
             /media/examples/surfer-240-200.jpg
' />
<!-- #8150 -->
<img
  sizes='(max-width: 1400px) 100vw, 1400px'
  srcset='
_20200401_145009_szrhju_c_scale,w_200.jpg 200w,
_20200401_145009_szrhju_c_scale,w_379.jpg 379w,
_20200401_145009_szrhju_c_scale,w_515.jpg 515w,
_20200401_145009_szrhju_c_scale,w_630.jpg 630w,
_20200401_145009_szrhju_c_scale,w_731.jpg 731w,
_20200401_145009_szrhju_c_scale,w_828.jpg 828w,
_20200401_145009_szrhju_c_scale,w_921.jpg 921w,
_20200401_145009_szrhju_c_scale,w_995.jpg 995w,
_20200401_145009_szrhju_c_scale,w_1072.jpg 1072w,
_20200401_145009_szrhju_c_scale,w_1145.jpg 1145w,
_20200401_145009_szrhju_c_scale,w_1216.jpg 1216w,
_20200401_145009_szrhju_c_scale,w_1284.jpg 1284w,
_20200401_145009_szrhju_c_scale,w_1350.jpg 1350w,
_20200401_145009_szrhju_c_scale,w_1398.jpg 1398w,
_20200401_145009_szrhju_c_scale,w_1400.jpg 1400w'
  src='_20200401_145009_szrhju_c_scale,w_1400.jpg'
  alt=''
/>
================================================================================
`;

exports[`scrset.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img src="/assets/visual.png"
srcset="/assets/visual@0.5.png  400w, /assets/visual.png      805w"
sizes="(max-width: 66rem) 100vw, 66rem" alt=""/>
<img src="/assets/visual.png"
srcset="/assets/visual@0.5.png  400w, /assets/visual.png      805w,	/assets/visual@2x.png   1610w,	/assets/visual@3x.png   2415w"
sizes="(max-width: 66rem) 100vw, 66rem" alt=""/>
<img src="/assets/visual.png"
srcset="/assets/visual@0.5.png  0.5x, /assets/visual.png      1111x,	/assets/visual@2x.png   2x,	/assets/visual@3x.png   3.3333x"
sizes="(max-width: 66rem) 100vw, 66rem" alt=""/>
<img

srcset="
             /media/examples/surfer-240-200.jpg
">
<!-- #8150 -->
<img
sizes="(max-width: 1400px) 100vw, 1400px"
srcset="
_20200401_145009_szrhju_c_scale,w_200.jpg 200w,
_20200401_145009_szrhju_c_scale,w_379.jpg 379w,
_20200401_145009_szrhju_c_scale,w_515.jpg 515w,
_20200401_145009_szrhju_c_scale,w_630.jpg 630w,
_20200401_145009_szrhju_c_scale,w_731.jpg 731w,
_20200401_145009_szrhju_c_scale,w_828.jpg 828w,
_20200401_145009_szrhju_c_scale,w_921.jpg 921w,
_20200401_145009_szrhju_c_scale,w_995.jpg 995w,
_20200401_145009_szrhju_c_scale,w_1072.jpg 1072w,
_20200401_145009_szrhju_c_scale,w_1145.jpg 1145w,
_20200401_145009_szrhju_c_scale,w_1216.jpg 1216w,
_20200401_145009_szrhju_c_scale,w_1284.jpg 1284w,
_20200401_145009_szrhju_c_scale,w_1350.jpg 1350w,
_20200401_145009_szrhju_c_scale,w_1398.jpg 1398w,
_20200401_145009_szrhju_c_scale,w_1400.jpg 1400w"
src="_20200401_145009_szrhju_c_scale,w_1400.jpg"
alt="">

=====================================output=====================================
<img
  src="/assets/visual.png"
  srcset="/assets/visual@0.5.png  400w, /assets/visual.png      805w"
  sizes="(max-width: 66rem) 100vw, 66rem"
  alt=""
/>
<img
  src="/assets/visual.png"
  srcset="/assets/visual@0.5.png  400w, /assets/visual.png      805w,	/assets/visual@2x.png   1610w,	/assets/visual@3x.png   2415w"
  sizes="(max-width: 66rem) 100vw, 66rem"
  alt=""
/>
<img
  src="/assets/visual.png"
  srcset="/assets/visual@0.5.png  0.5x, /assets/visual.png      1111x,	/assets/visual@2x.png   2x,	/assets/visual@3x.png   3.3333x"
  sizes="(max-width: 66rem) 100vw, 66rem"
  alt=""
/>
<img srcset="
             /media/examples/surfer-240-200.jpg
" />
<!-- #8150 -->
<img
  sizes="(max-width: 1400px) 100vw, 1400px"
  srcset="
_20200401_145009_szrhju_c_scale,w_200.jpg 200w,
_20200401_145009_szrhju_c_scale,w_379.jpg 379w,
_20200401_145009_szrhju_c_scale,w_515.jpg 515w,
_20200401_145009_szrhju_c_scale,w_630.jpg 630w,
_20200401_145009_szrhju_c_scale,w_731.jpg 731w,
_20200401_145009_szrhju_c_scale,w_828.jpg 828w,
_20200401_145009_szrhju_c_scale,w_921.jpg 921w,
_20200401_145009_szrhju_c_scale,w_995.jpg 995w,
_20200401_145009_szrhju_c_scale,w_1072.jpg 1072w,
_20200401_145009_szrhju_c_scale,w_1145.jpg 1145w,
_20200401_145009_szrhju_c_scale,w_1216.jpg 1216w,
_20200401_145009_szrhju_c_scale,w_1284.jpg 1284w,
_20200401_145009_szrhju_c_scale,w_1350.jpg 1350w,
_20200401_145009_szrhju_c_scale,w_1398.jpg 1398w,
_20200401_145009_szrhju_c_scale,w_1400.jpg 1400w"
  src="_20200401_145009_szrhju_c_scale,w_1400.jpg"
  alt=""
/>
================================================================================
`;

exports[`style.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<p style="

          some nonsense


but


why not">String</p>
<p style="

          font-size: 35px and


some


nonsense">String</p>
<p style="

          font-size: 35px; color:red;


font-weight: 500;


">String</p>

<p style="

          some nonsense


{{but}}


why not">String</p>
<p style="

          font-size: 35px and


{{some}}


nonsense">String</p>
<p style="

          font-size: 35px; color:red;


font-weight: {{weight}};


">String</p>

=====================================output=====================================
<p style='

          some nonsense


but


why not'>
  String
</p>
<p style='

          font-size: 35px and


some


nonsense'>
  String
</p>
<p style='

          font-size: 35px; color:red;


font-weight: 500;


'>
  String
</p>

<p style='

          some nonsense


{{but}}


why not'>
  String
</p>
<p style='

          font-size: 35px and


{{some}}


nonsense'>
  String
</p>
<p style='

          font-size: 35px; color:red;


font-weight: {{weight}};


'>
  String
</p>
================================================================================
`;

exports[`style.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p style="

          some nonsense


but


why not">String</p>
<p style="

          font-size: 35px and


some


nonsense">String</p>
<p style="

          font-size: 35px; color:red;


font-weight: 500;


">String</p>

<p style="

          some nonsense


{{but}}


why not">String</p>
<p style="

          font-size: 35px and


{{some}}


nonsense">String</p>
<p style="

          font-size: 35px; color:red;


font-weight: {{weight}};


">String</p>

=====================================output=====================================
<p style="

          some nonsense


but


why not">
  String
</p>
<p style="

          font-size: 35px and


some


nonsense">
  String
</p>
<p style="

          font-size: 35px; color:red;


font-weight: 500;


">
  String
</p>

<p style="

          some nonsense


{{but}}


why not">
  String
</p>
<p style="

          font-size: 35px and


{{some}}


nonsense">
  String
</p>
<p style="

          font-size: 35px; color:red;


font-weight: {{weight}};


">
  String
</p>
================================================================================
`;
